# petrinetfactorysim

./: README.md  app.py  gridsearch.py  petrinet.py  pyproject.toml  sim.py  visualize.py
graphs/: Production  grid_search_results.csv
tests/: test_sim.py
