[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "woodproduction"
version = "0.1.0"
description = "A stochastic Petri net simulation of a wood production line"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.24.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.13.0",
    "graphviz>=0.20.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0.0",
    "black>=22.3.0",
    "isort>=5.10.1",
]